add image listing thumbnails and validation
